fix: z-index should be over the link

--- a/packages/ui/src/components/QueueCard/QueueStats/QueueStats.module.css
+++ b/packages/ui/src/components/QueueCard/QueueStats/QueueStats.module.css
@@ -16,6 +16,7 @@
   font-size: 0.75rem;
   color: #fff;
   text-align: center;
+  z-index: 10;
 }
 
 .progressBar > div {
